RESOLVED FIXED271531
[IFC][Cleanup] InlineInvalidation::styleChanged should set InlineDamage::Reason::StyleChange
https://bugs.webkit.org/show_bug.cgi?id=271531
Summary [IFC][Cleanup] InlineInvalidation::styleChanged should set InlineDamage::Reas...
alan
Reported 2024-03-23 18:55:46 PDT
ssia
Attachments
Patch (3.61 KB, patch)
2024-03-23 18:57 PDT, alan
no flags
Patch (3.61 KB, patch)
2024-03-24 06:26 PDT, alan
no flags
[fast-cq]Patch (6.23 KB, patch)
2024-03-24 09:58 PDT, alan
ews-feeder: commit-queue-
alan
Comment 1 2024-03-23 18:57:44 PDT
alan
Comment 2 2024-03-24 06:26:34 PDT
alan
Comment 3 2024-03-24 09:58:45 PDT
Created attachment 470576 [details] [fast-cq]Patch
EWS
Comment 4 2024-03-24 12:56:41 PDT
Committed 276614@main (e558e2adb12a): <https://commits.webkit.org/276614@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 470576 [details].
Radar WebKit Bug Importer
Comment 5 2024-03-24 12:58:04 PDT
Note You need to log in before you can comment on or make changes to this bug.