[IFC][Cleanup] InlineInvalidation::styleChanged should set InlineDamage::Reason::StyleChange https://bugs.webkit.org/show_bug.cgi?id=271531

Reviewed by Antti Koivisto.

This also makes it easier to reason about clearing when running full (but incremental, after a style change) layout.

* Source/WebCore/layout/formattingContexts/inline/invalidation/InlineDamage.h:
* Source/WebCore/layout/formattingContexts/inline/invalidation/InlineInvalidation.cpp:
(WebCore::Layout::InlineInvalidation::styleChanged):
* Source/WebCore/layout/integration/LayoutIntegrationCoverage.cpp:
(WebCore::LayoutIntegration::shouldInvalidateLineLayoutPathAfterChangeFor):
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::layout):
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.h:
(WebCore::LayoutIntegration::LineLayout::damage const):
(WebCore::LayoutIntegration::LineLayout::damageReasons const): Deleted.

Canonical link: https://commits.webkit.org/276614@main